added lint(almost)
